--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Feedback</title>
   </head>
-  <body class="bg-very-dark-bluedark-blue h-svh flex justify-center items-center">
+  <body class="bg-very-dark-blue h-svh flex justify-center items-center">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
